--- a/spacex/public/index.html
+++ b/spacex/public/index.html
@@ -28,6 +28,10 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+    <!-- All component files go here, as a script, make sure to include type="text/babel" -->
+    <script type="text/babel" src="../src/Card.js"></script>
+
+
     <!--
       This HTML file is a template. If you open it directly in the browser, you will see an empty page.
 
