Renames Card to CardSummary.

--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,8 @@
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!-- All component files go here, as a script, make sure to include type="text/babel" -->
-    <script type="text/babel" src="../src/Card.js"></script>
+    <script type="text/babel" src="../src/CardSummary.js"></script>
+    <!-- <script type="text/babel" src="../src/CardFull.js"></script> -->
 
 
     <!--
