Hardcodes Falcon9 rocket into CardFull component.

--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,7 @@
     <div id="root"></div>
     <!-- All component files go here, as a script, make sure to include type="text/babel" -->
     <script type="text/babel" src="../src/CardSummary.js"></script>
-    <!-- <script type="text/babel" src="../src/CardFull.js"></script> -->
+    <script type="text/babel" src="../src/CardFull.js"></script>
 
 
     <!--
